Extract findSegment helper to deduplicate mapPosition and getMappedName